[gd_scene load_steps=23 format=3 uid="uid://bijr1niobi180"]

[ext_resource type="Script" path="res://scenes/gameplay/player/player.gd" id="1_qe601"]
[ext_resource type="Script" path="res://scenes/gameplay/weapons/player_weapon.gd" id="2_2fm5i"]
[ext_resource type="Texture2D" uid="uid://r28s42mguoxy" path="res://assets/sprites/circle.svg" id="2_nw4bl"]
[ext_resource type="Texture2D" uid="uid://dop8nj5r7a62f" path="res://assets/sprites/Mouse_Sprite.png" id="2_u4q6q"]
[ext_resource type="Texture2D" uid="uid://dlqmc4yj2qhr" path="res://assets/sprites/SwordR.png" id="2_xlbxk"]
[ext_resource type="Script" path="res://scenes/gameplay/player/player_tail.gd" id="4_ci5k6"]
[ext_resource type="Texture2D" uid="uid://c03emcqmmx00a" path="res://assets/sprites/circle-mouse.svg" id="6_r2rqk"]
[ext_resource type="AudioStream" uid="uid://byqryh54qat26" path="res://assets/audio/mouse_snap.ogg" id="7_lsi4b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y38pr"]
radius = 15.0

[sub_resource type="Animation" id="Animation_yl3nl"]
resource_name = "pickup"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.1, 0.135062, 1.56873, -0.1, -0.0195754, 0.108283, -0.0164696, 1, -0.1, -0.638562, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.1, 0.195426, 1.37254, -0.1, 0.0603645, 0.1, 0.0452733, 1, -0.1, 0.0858117, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ml4ny"]
_data = {
"pickup": SubResource("Animation_yl3nl")
}

[sub_resource type="Curve" id="Curve_u3kns"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_0p7rv"]
colors = PackedColorArray(0.541176, 0.427451, 0.607843, 1, 0.290196, 0.298039, 0.490196, 1)

[sub_resource type="Gradient" id="Gradient_3v7rl"]
colors = PackedColorArray(0.611765, 0.223529, 0.368627, 1, 0.831373, 0.270588, 0.462745, 1)

[sub_resource type="Gradient" id="Gradient_65jji"]
colors = PackedColorArray(0.219608, 0.564706, 0.478431, 1, 0.407843, 0.647059, 0.592157, 1)

[sub_resource type="Gradient" id="Gradient_02a84"]
colors = PackedColorArray(0.270588, 0.329412, 0.682353, 1, 0.392157, 0.411765, 0.737255, 1)

[sub_resource type="Animation" id="Animation_cqnvl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.607843, 0.933333, 0.117647)]
}

[sub_resource type="Animation" id="Animation_bdmye"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, 10), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.607843, 0.933333, 0), Color(0, 0.607843, 0.933333, 0.117647)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7ynk"]
_data = {
"RESET": SubResource("Animation_cqnvl"),
"idle": SubResource("Animation_bdmye")
}

[sub_resource type="Animation" id="Animation_cddq6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_yipce"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.5, 2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w43h6"]
_data = {
"RESET": SubResource("Animation_cddq6"),
"idle": SubResource("Animation_yipce")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_qe601")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y38pr")

[node name="Weapon" type="Node2D" parent="."]
position = Vector2(37, 0)
script = ExtResource("2_2fm5i")

[node name="Sprite" type="Sprite2D" parent="Weapon"]
rotation = 0.261799
texture = ExtResource("2_xlbxk")
offset = Vector2(0, 50)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
libraries = {
"": SubResource("AnimationLibrary_ml4ny")
}

[node name="Tail" type="Node2D" parent="."]
position = Vector2(-45, 0)

[node name="Line2D" type="Line2D" parent="Tail"]
width_curve = SubResource("Curve_u3kns")
default_color = Color(0.541176, 0.427451, 0.607843, 1)
gradient = SubResource("Gradient_0p7rv")
script = ExtResource("4_ci5k6")
length = 15
gradient_red = SubResource("Gradient_3v7rl")
gradient_green = SubResource("Gradient_65jji")
gradient_blue = SubResource("Gradient_02a84")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_u4q6q")

[node name="Area2" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0.607843, 0.933333, 0.117647)
scale = Vector2(5, 5)
texture = ExtResource("2_nw4bl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_w7ynk")
}

[node name="TooLongUnsnapped" type="Timer" parent="Area2"]
wait_time = 9.0
autostart = true

[node name="Area" type="Sprite2D" parent="."]
visible = false
rotation = 2.82743
scale = Vector2(2, 2)
texture = ExtResource("6_r2rqk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_w43h6")
}

[node name="MouseSnapSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lsi4b")

[connection signal="timeout" from="Area2/TooLongUnsnapped" to="." method="_on_too_long_unsnapped_timeout"]
